--- a/lr-lamda/lr-hadoop/pom.xml
+++ b/lr-lamda/lr-hadoop/pom.xml
@@ -25,7 +25,7 @@
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-client</artifactId>
-			<version>2.5.1-mapr-1501</version>
+			<version>2.5.1</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
