--- a/jnlp/jnlp-example/pom.xml
+++ b/jnlp/jnlp-example/pom.xml
@@ -14,11 +14,16 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>jnlp</artifactId>
+			<groupId>com.oracle.javax</groupId>
+			<artifactId>javax-jnlp</artifactId>
 			<version>LATEST</version>
 			<systemPath>${java.home}/lib/javaws.jar</systemPath>
 			<scope>system</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
 		</dependency>
 	</dependencies>
 
