--- a/lamdafu-boot/pom.xml
+++ b/lamdafu-boot/pom.xml
@@ -9,7 +9,7 @@
 	<artifactId>lamdafu-boot</artifactId>
 	<description>Uses the Java Bootstrap class loader to call λ implementations.  While not technically required to call λs, this package provides utilities to make accessing λ meta data and implementations easier.  Only JDK core classes and interfaces are allowed to pass between λs and their callers.</description>
 	<url>https://github.com/mpouttuclarke/lamdafu/wiki/LamdaFu-Boot</url>
-	<name>&#955;&#31119; Boot</name>
+	<name>λ福 - LamdaFu Boot</name>
 	<dependencies>
 		<!-- NONE !!! -->
 	</dependencies>
