--- a/lamdafu-kernel/pom.xml
+++ b/lamdafu-kernel/pom.xml
@@ -7,10 +7,54 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>lamdafu-kernel</artifactId>
-	<name>&#955;&#31119; Kernal</name>
-	<dependencies>
-	
-	</dependencies>
-	<url>https://github.com/mpouttuclarke/lamdafu/wiki/LamdaFu-Kernal</url>
+	<name>λ福 - LamdaFu Kernel</name>
 	<description></description>
+	<url>https://github.com/mpouttuclarke/lamdafu/wiki/LamdaFu-Kernel</url>
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>3.5</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.10</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.calcite</groupId>
+			<artifactId>calcite-core</artifactId>
+			<version>1.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.calcite</groupId>
+			<artifactId>calcite-avatica</artifactId>
+			<version>1.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.calcite</groupId>
+			<artifactId>calcite-linq4j</artifactId>
+			<version>1.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.re2j</groupId>
+			<artifactId>re2j</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.roaringbitmap</groupId>
+			<artifactId>RoaringBitmap</artifactId>
+			<version>0.5.10</version>
+		</dependency>
+	</dependencies>
 </project>
