--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,14 @@
 	<artifactId>lamdafu-parent</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>LamdaFu</name>
+	<name>λ福 - LamdaFu</name>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	<url>https://github.com/mpouttuclarke/lamdafu/wiki</url>
+	<description>Leverage λ APIs to future-proof big data processing.  Mix and match big data technologies.  Unify batch and &quot;real-time&quot; business logic.  Unit test on a single machine and deploy to the largest clusters.
+
+Mary didn't have a little Lamb ... da!  We prefer the Unicode (and Greek) spelling of lamda as simpler, more intuitive, and just more BC.</description>
 	<modules>
 		<module>lamdafu-boot</module>
 		<module>lamdafu-kernel</module>
@@ -24,18 +31,11 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
+						<source>1.7</source>
+						<target>1.7</target>
 					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
-	<url>https://github.com/mpouttuclarke/lamdafu/wiki</url>
-	<description>Leverage &#955; APIs to future-proof big data processing.  Mix and match big data technologies at will.  Unify batch and &quot;real-time&quot; business logic.  Unit test on a single machine and deploy to the largest clusters.
-
-Mary didn't have a little Lamb ... da!  We prefer the Unicode spelling of lamda as simpler, more intuitive, and just more BC.</description>
 </project>
