Added boot and cast utilities

--- a/lamdafu-kernel/pom.xml
+++ b/lamdafu-kernel/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.lamdafu</groupId>
+		<groupId>lamdafu</groupId>
 		<artifactId>lamdafu-parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
@@ -11,6 +11,11 @@
 	<description></description>
 	<url>https://github.com/mpouttuclarke/lamdafu/wiki/LamdaFu-Kernel</url>
 	<dependencies>
+		<dependency>
+			<groupId>lamdafu</groupId>
+			<artifactId>lamdafu-boot</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
