Added LamdaMap interface for StreamingCalc

--- a/lamdafu-kernel/pom.xml
+++ b/lamdafu-kernel/pom.xml
@@ -17,14 +17,9 @@
 			<version>${project.parent.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.4</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-math3</artifactId>
-			<version>3.5</version>
+			<groupId>lamdafu</groupId>
+			<artifactId>lamdafu-common</artifactId>
+			<version>${project.parent.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-codec</groupId>
