--- a/lamdafu-cdap/pom.xml
+++ b/lamdafu-cdap/pom.xml
@@ -8,6 +8,9 @@
 	</parent>
 	<artifactId>lamdafu-cdap</artifactId>
 	<name>λ福 - LamdaFu for CDAP</name>
+	<properties>
+		<app.main.class>lamdafu.cdap.streamstat.StreamStatApp</app.main.class>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>co.cask.cdap</groupId>
@@ -43,4 +46,33 @@
 			<version>2.24.0</version>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<extensions>true</extensions>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>${app.main.class}</mainClass>
+						</manifest>
+					</archive>
+					<instructions>
+						<Embed-Dependency>*;inline=false;scope=compile</Embed-Dependency>
+						<Embed-Transitive>true</Embed-Transitive>
+						<Embed-Directory>lib</Embed-Directory>
+					</instructions>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>bundle</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
