--- a/lamdafu-common/pom.xml
+++ b/lamdafu-common/pom.xml
@@ -44,5 +44,10 @@
 			<artifactId>colt</artifactId>
 			<version>1.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.esotericsoftware.kryo</groupId>
+			<artifactId>kryo</artifactId>
+			<version>2.24.0</version>
+		</dependency>
 	</dependencies>
 </project>
